--- a/website/elements/gender-selector.html
+++ b/website/elements/gender-selector.html
@@ -46,7 +46,7 @@
 
 	<script>
 		(function () {
-			const GENDERS = ["Male", "Female"];
+			const GENDERS = ["male", "female"];
 			Polymer({
 				is: "gender-selector",
 
