--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,8 @@
 	<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 	<link rel="import" href="bower_components/polymer/polymer.html"/>
 	<link rel="import" href="elements/patient-form.html"/>
-	<title></title>
+	<link rel="stylesheet" href="css/main.css"/>
+	<title>Captiom</title>
 </head>
 <body>
 	<patient-form></patient-form>
