--- a/website/index.html
+++ b/website/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 	<link rel="import" href="bower_components/polymer/polymer.html"/>
-	<link rel="import" href="elements/patient-form.html"/>
-	<link rel="stylesheet" href="css/main.css"/>
+	<link rel="import" href="elements/captiom-application.html"/>
+	<link rel="stylesheet" href="css/reset.css"/>
 	<title>Captiom</title>
 </head>
 <body>
-	<patient-form></patient-form>
+	<captiom-application></captiom-application>
 </body>
 </html>
