--- a/website/app/elements/routing.html
+++ b/website/app/elements/routing.html
@@ -10,21 +10,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <script src="../bower_components/page/page.js"></script>
 <script>
-  window.addEventListener('WebComponentsReady', function() {
+  window.addEventListener('WebComponentsReady', () => {
 
-    // We use Page.js for routing. This is a Micro
-    // client-side router inspired by the Express router
-    // More info: https://visionmedia.github.io/page.js/
-    page('/', function () {
-      app.route = 'home';
-    });
+    page('/', () => app.route = 'home');
 
-    page('/patient', function (data) {
+    page('/patient', (data) => {
       app.route = 'patient';
       app.params = data.params;
     });
 
-    // add #! before urls
     page({
       hashbang: true
     });
