Implement push service using WebSockets. Handle routing with push messages

--- a/website/app/elements/elements.html
+++ b/website/app/elements/elements.html
@@ -25,12 +25,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 
-<!-- Configure your routes here -->
-<link rel="import" href="routing.html">
-
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="../bower_components/cotton-push/cotton-push-behavior.html">
+<link rel="import" href="captiom-app/captiom-app.html">
 <link rel="import" href="patient-form/patient-form.html">
 <link rel="import" href="slide-panel/slide-panel.html">
 <link rel="import" href="gender-selector/gender-selector.html">
