--- a/website/app/elements/elements.html
+++ b/website/app/elements/elements.html
@@ -24,6 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
@@ -31,5 +32,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/cotton-push/cotton-push-behavior.html">
 <link rel="import" href="captiom-app/captiom-app.html">
 <link rel="import" href="patient-form/patient-form.html">
-<link rel="import" href="slide-panel/slide-panel.html">
 <link rel="import" href="gender-selector/gender-selector.html">
+<link rel="import" href="test-configuration/test-configuration.html">
+<link rel="import" href="device-configuration/device-configuration.html">
