--- a/website/app/elements/patient-form/patient-form.html
+++ b/website/app/elements/patient-form/patient-form.html
@@ -1,20 +1,9 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-form/iron-form.html"/>
 <link rel="import" href="../../bower_components/paper-input/paper-input.html"/>
 <link rel="import" href="../../bower_components/paper-button/paper-button.html"/>
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html"/>
 <link rel="import" href="../gender-selector/gender-selector.html"/>
-<link rel="import" href="../slide-panel/slide-panel.html"/>
 
 <dom-module id="patient-form">
   <template>
@@ -37,75 +26,47 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <iron-ajax
-    method="get"
-    handle-as="json"
-    on-response="patientResponse"
-    id="getPatientRequest"></iron-ajax>
-
-    <iron-ajax
         url="/patient"
         method="post"
         handle-as="json"
+        content-type="application/json"
         id="postPatientRequest"></iron-ajax>
 
     <form is="iron-form" method="post" action="/patient" id="patientForm">
-      <paper-input id="patientId" label="Patient id" required on-keyup="inputChanged" maxlength="8" char-counter></paper-input>
-      <slide-panel id="moreInformation">
-        <paper-input id="age" label="Age" required type="number"></paper-input>
-        <gender-selector id="genderMenu" required></gender-selector>
-      </slide-panel>
+      <paper-input label="Patient id" required maxlength="8" char-counter value="{{patientId}}"></paper-input>
+      <paper-input-container>
+        <label>Age</label>
+        <input is="iron-input" type="number" id="age" autocomplete="off">
+      </paper-input-container>
+      <gender-selector id="genderMenu" required></gender-selector>
 
-      <paper-button raised on-click="beginDiagnosis">Begin diagnosis</paper-button>
+      <paper-button raised on-click="beginDiagnosis">Configure device</paper-button>
     </form>
   </template>
   <script>
 
-  const PATIENT_URL = '/patient/';
+  (() => {
+    'use strict';
 
-  class PatientForm {
-    beforeRegister() {
-      this.is = 'patient-form';
-      this.lastRequest = '';
-    }
+    Polymer({
+      is: 'patient-form',
 
-    inputChanged(e) {
-			if (e.target.value.length !== 8 || this.lastRequest === e.target.value) {
-        return;
+      beginDiagnosis: function () {
+        if (!this._validate(this.$)) {
+          return;
+        }
+  			this.$.postPatientRequest.body = {
+  				patientId: this.patientId,
+  				age: this.$.age.value,
+  				gender: this.querySelector('gender-selector').gender()
+  			};
+  			this.$.postPatientRequest.generateRequest();
+      },
+
+      _validate: function (element) {
+        return element.patientForm.validate();
       }
-			this.lastRequest = e.target.value;
-			this.$.getPatientRequest.url = PATIENT_URL + this.lastRequest;
-			this.$.getPatientRequest.generateRequest();
-		}
-
-		patientResponse(e) {
-			this.$.moreInformation.show();
-			if (e.detail.status === 200) {
-				this._fillPatientData(this.$, e.detail.response);
-      }
-		}
-
-		beginDiagnosis() {
-			if (!this._validate(this.$)) {
-        return;
-      }
-			this.$.postPatientRequest.params = {
-				patientId: this.$.patientId.value,
-				age: this.$.age.value,
-				gender: this.$.genderMenu.gender()
-			};
-			this.$.postPatientRequest.generateRequest();
-		}
-
-    _fillPatientData(element, patient) {
-			element.age.value = patient.age;
-			element.genderMenu.select(patient.gender);
-		}
-
-		_validate(element) {
-			return element.patientForm.validate();
-		}
-  }
-
-  Polymer(PatientForm);
+    });
+  })();
   </script>
 </dom-module>
