--- a/website/app/styles/shared-styles.html
+++ b/website/app/styles/shared-styles.html
@@ -11,6 +11,19 @@
           font-size: 24px!important;
         }
       }
+
+      paper-input {
+        --paper-input-container-input: {
+          width: 100% !important;
+        };
+        --paper-input-container-label: {
+          width: 100% !important;
+        };
+      }
+
+      paper-input-container label, paper-input-container input {
+        width: 100% !important;
+      }
     </style>
   </template>
 </dom-module>
