Add characters for optotype on test-configuration.html

--- a/website/app/elements/captiom-app/captiom-app.html
+++ b/website/app/elements/captiom-app/captiom-app.html
@@ -170,7 +170,7 @@
       _showTest: function (configuration) {
         this._show('2');
         this.patientId = configuration.patientId;
-        this.querySelector('test-configuration').configure(configuration.deviceRange);
+        this.querySelector('test-configuration').configure(configuration);
       },
 
       _show: function (page) {
