--- a/website/app/styles/shared-styles.html
+++ b/website/app/styles/shared-styles.html
@@ -6,6 +6,11 @@
         @apply(--paper-font-display2);
       }
 
+      @font-face {
+      	font-family: Optotypes;
+      	src: url('../fonts/Optotypes.ttf');
+      }
+
       @media (max-width: 600px) {
         .page-title {
           font-size: 24px!important;
