--- a/website/app/elements/elements.html
+++ b/website/app/elements/elements.html
@@ -14,12 +14,17 @@
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 
+<link rel="import" href="../bower_components/cotton-push/cotton-push-behavior.html">
+
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="../bower_components/cotton-push/cotton-push-behavior.html">
+
 <link rel="import" href="captiom-app/captiom-app.html">
 <link rel="import" href="patient-form/patient-form.html">
 <link rel="import" href="gender-selector/gender-selector.html">
 <link rel="import" href="device-configuration/device-configuration.html">
 <link rel="import" href="test-configuration/test-configuration.html">
-<link rel="import" href="optotype-character/optotype-character.html">
+<link rel="import" href="eye-selector/eye-selector.html">
+<link rel="import" href="character-selector/character-selector.html">
+<link rel="import" href="degrees-selector/degrees-selector.html">
+<link rel="import" href="test-result/test-result.html">
