--- a/website/app/index.html
+++ b/website/app/index.html
@@ -33,6 +33,10 @@
 <body unresolved class="fullbleed layout vertical">
   <div id="load-font">Lorem ipsum</div>
   <captiom-app></captiom-app>
+
+  <script>
+    PushService.openConnection('ws://192.168.1.6:8081');
+  </script>
 </body>
 
 </html>
