--- a/website/app/elements/test-result/test-result.html
+++ b/website/app/elements/test-result/test-result.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
-<link rel="import" href="test-case/test-case.html">
+<link rel="import" href="test-case.html">
 
 <dom-module id="test-result">
   <style>
