Change position of slider knob

--- a/website/app/elements/vertical-paper-slider/vertical-paper-slider.html
+++ b/website/app/elements/vertical-paper-slider/vertical-paper-slider.html
@@ -144,8 +144,8 @@
         margin-left: 3px;
         border-radius: 50% 50% 50% 0;
 
-        -webkit-transform: rotate(-45deg) scale(0) translate(0);
-        transform: rotate(-45deg) scale(0) translate(0);
+        -webkit-transform: rotate(-135deg) scale(0) translate(0);
+        transform: rotate(-135deg) scale(0) translate(0);
       }
 
       #sliderKnobInner::before,
@@ -159,8 +159,8 @@
       }
 
       .pin.expand > #sliderKnob > #sliderKnobInner::before {
-        -webkit-transform: rotate(-45deg) scale(1) translate(17px, -17px);
-        transform: rotate(-45deg) scale(1) translate(17px, -17px);
+        -webkit-transform: rotate(-135deg) scale(1) translate(17px, -20px);
+        transform: rotate(-135deg) scale(1) translate(17px, -20px);
       }
 
       .pin > #sliderKnob > #sliderKnobInner::after {
@@ -179,8 +179,8 @@
       }
 
       .pin.expand > #sliderKnob > #sliderKnobInner::after {
-        -webkit-transform: scale(1) translate(0, -17px);
-        transform: scale(1) translate(0, -17px);
+        -webkit-transform: scale(1) translate(-25px, 9px);
+        transform: scale(1) translate(-25px, 9px);
       }
 
       #ink {
